# stm32-spdm-demo

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.helix/: languages.toml
mctp-transport/: Cargo.toml
mctp-transport/src/: lib.rs
spdm-platform/: Cargo.toml
spdm-platform/certs/: ca.cert.der.sha384sum
spdm-platform/src/: cert_chain.rs  lib.rs
spdm-requester/: Cargo.toml
spdm-requester/.cargo/: config.toml
spdm-requester/src/: main.rs
spdm-responder/: Cargo.toml
spdm-responder/.cargo/: config.toml
spdm-responder/src/: main.rs
