[workspace]
resolver = "3"
members = ["mctp-transport", "spdm-responder", "spdm-platform", "spdm-requester" ]

[profile.release]
debug = 2

[workspace.dependencies]
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-sync = { version = "0.8.0"}
embedded-hal-async = "1.0.0"
defmt = "1"
mctp-lib = { git = "https://github.com/OpenPRoT/mctp-lib.git" }
mctp = { git = "https://github.com/CodeConstruct/mctp-rs.git", rev = "9e52b626863b916d900ca1ddfdd9215baf0f80fc" , default-features = false }
spdm-lib = { git = "https://github.com/9elements/spdm-lib.git", branch = "buildup" }
