[package]
name = "spdm-platform"
version = "0.1.0"
edition = "2024"

[dependencies]
spdm-lib = { git = "https://github.com/9elements/spdm-lib.git", branch = "buildup" }
embassy-stm32 = { version = "0.6.0", features = ["defmt", "time-driver-any", "memory-x"] }
embassy-sync = "0.8.0"
heapless = "0.9.2"
zerocopy = "0.8.48"
defmt = "1"

[features]
default = ["h753"]
u5a5 = ["embassy-stm32/stm32u5a5zj"]
h753 = ["embassy-stm32/stm32h753zi"]

