[package]
name = "spdm-requester"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
embassy-stm32 = { version = "0.6.0", features = ["defmt", "stm32h753zi", "time-driver-any", "memory-x"] }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-time.workspace = true
embassy-sync.workspace = true

defmt.workspace = true
defmt-rtt = "1"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1", features = ["print-defmt"] }

mctp-transport = { path = "../mctp-transport", features = ["h753"] }
spdm-platform = {path = "../spdm-platform", features = ["h753"] }
static_cell = "2.1.1"
mctp-lib.workspace = true
mctp.workspace = true
spdm-lib.workspace = true


